<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_create_account"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="@dimen/title_account"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="302dp" />
    <Button
        android:id="@+id/btn_back"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/img_2"
        android:text=""/>
    <ImageView
        android:id="@+id/img_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        app:srcCompat="@drawable/img_1"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_bar"
        >

    <LinearLayout
        android:id="@+id/principal_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/img_bar"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_bar"
            android:layout_marginTop="@dimen/margin_top_email"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/email_address"/>
        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_below="@id/tv_email"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_left"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_weight="9"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/img_check_email"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_error"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_email"
            android:layout_marginLeft="@dimen/margin_left"
            android:text=""
            android:textColor="@color/red" />
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_error_email"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/create_password"/>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_below="@id/tv_password"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_weight="9"

                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/img_check_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_error"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_below="@id/layout_password"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/error_less_character"/>
        <TextView
            android:id="@+id/tv_repeat_password"
            android:layout_width="match_parent"
            android:text="@string/repeat_password"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_below="@id/tv_error_password"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/layout_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_repeat_password"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_left">

            <EditText
                android:id="@+id/et_check_repeat_password"
                android:layout_width="wrap_content"
                android:layout_weight="9"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/img_repeat_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_error"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error_repeat_password"
            android:layout_width="match_parent"
            android:text="@string/repeat_password"
            android:layout_marginLeft="@dimen/margin_left"
            android:textColor="@color/red"
            android:layout_below="@id/layout_repeat_password"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_policies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_top_policies"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_below="@id/tv_error_repeat_password"
            android:text="@string/policies"/>

        <Button
            android:id="@+id/bt_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/next"/>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>